# AeroLex-Logger

./: .env  .env.example  .gitignore  Encryption.key  POWERSHELL_API_SPEC.md  README.md  README_ASR_EVALUATION_METRICS.md  README_VR_TRAINING.md  README_evaluation.md  TESTING_VIDEO_COMPLETION.md  Video_Tracker.ps1  asr.service  asr.service.bat  asr_config.ini  asr_evaluate.py  asr_service.py  download_model.py  generate_cert.py  install_linux.sh  install_windows.bat  pyproject.toml  requirements.txt  start_backend.py  start_vr_asr.py  test_audio.py  test_installation.py  test_video_completion.py
backend/: __init__.py  main.py
backend/api/routes/: admin.py  asr.py  auth.py  students.py  videos.py
backend/database/: sqlite_db.py
backend/services/: evaluation_service.py  student_service.py  video_service.py
data/: ground_truth.txt  vr_training.db
data/ground_truth/: 01_7L_Departure_North.txt  02_7L_Arrival_North.txt  03_1.txt  03_7R_Arrival_South.txt  04_7R_Departure_South.txt  05_Cross_Country_to_St_Augustine_Part_1.txt  06_Cross_Country_to_St_Augustine_Part_2.txt  07_Non_towered_Closed_Traffic_at_Deland_Part_1.txt  08_Non_towered_Closed_Traffic_at_Deland_Part_2.txt  09_Towered_Closed_Traffic_at_Flagler_Part_1.txt  10_Towered_Closed_Traffic_at_Flagler_Part_2.txt  11_Ormond_Departure_to_Daytona_Arrival_Part_1.txt  13_Ormond_Departure_to_Daytona_Arrival_Part_3.txt
src/: asr_evaluate.py  asr_service.py  asr_service_vr.py  download_model.py  ground_truth.txt  test_asr_filters.py  test_audio.py  test_backend.py  test_cleanup_videos_names.py  test_database.py  test_installation.py
web/: index.html
web/assets/css/: main.css  vr-styles.css
web/assets/img/thumbnails/: create_thumbnails.py
web/assets/js/: admin.js  api.js  app.js  auth.js  dashboard.js  video.js
