[project]
name = "aerolex-logger"
version = "0.1.0"
description = "Aerolex Logger: A local peech recognition service for flight training and aviation communication."
authors = [{ name = "Sang Buster", email = "hello@singsongaftermath.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2.0",
    "hf-xet>=1.1.10",
    "jsonlines>=4.0.0",
    "numpy>=2.2.6",
    "scipy>=1.10.0",
    "silero-vad>=6.0.0",
    "sounddevice>=0.5.2",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
]
