[project]
name = "aerolex-logger"
version = "0.1.0"
description = "Aerolex Logger: A local peech recognition service for flight training and aviation communication."
authors = [{ name = "Sang Buster", email = "hello@singsongaftermath.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.117.1",
    "faster-whisper>=1.2.0",
    "hf-xet>=1.1.10",
    "jsonlines>=4.0.0",
    "numpy>=2.2.6",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scipy>=1.10.0",
    "silero-vad>=6.0.0",
    "sounddevice>=0.5.2",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
